# IsoGridDFT

./: AGENTS.md  CODEBASE.md  README.md  pyproject.toml
docs/: GRID_REDESIGN_PLAN.md
src/isogrid/: __init__.py
tests/: test_active_subspace.py  test_fixed_potential_eigensolver.py  test_grid_geometry.py  test_gth_local_potential.py  test_h2_grid_convergence_audit.py  test_h2_hartree_boundary_diagnosis_audit.py  test_h2_hartree_poisson_comparison_audit.py  test_h2_hartree_tail_recheck_audit.py  test_h2_jax_eigensolver_hotpath_audit.py  test_h2_jax_kernel_consistency_audit.py  test_h2_jax_scf_hotpath_audit.py  test_h2_jax_singlet_mainline_audit.py  test_h2_jax_triplet_end_to_end_micro_profile_audit.py  test_h2_jax_triplet_hartree_energy_audit.py  test_h2_jax_triplet_reintegration_smoke_audit.py  test_h2_monitor_grid_base_charge_operator_gain_audit.py  test_h2_monitor_grid_base_trial_to_realized_residual_map_audit.py  test_h2_monitor_grid_charge_mode_compression_audit.py  test_h2_monitor_grid_charge_postprocess_audit.py  test_h2_monitor_grid_diis_scf_audit.py  test_h2_monitor_grid_fair_calibration_audit.py  test_h2_monitor_grid_fixed_potential_eigensolver_audit.py  test_h2_monitor_grid_generic_controller_compare_audit.py  test_h2_monitor_grid_geometry_consistency_audit.py  test_h2_monitor_grid_hartree_channel_drift_audit.py  test_h2_monitor_grid_hartree_response_delta_audit.py  test_h2_monitor_grid_k2_subspace_audit.py  test_h2_monitor_grid_kinetic_form_audit.py  test_h2_monitor_grid_kinetic_green_identity_audit.py  test_h2_monitor_grid_kinetic_operator_audit.py  (+33 more)
(+102 files in other folders)
