[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "IsoGridDFT"
version = "0.1.0"
description = "Adaptive real-space Kohn-Sham DFT for isolated molecules."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
audit = ["pyscf>=2.3"]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
